# GraphicApp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
src/: main.cpp
src/graphic/: graphic_container.cpp  graphic_container.h  graphic_container.hpp
src/graphic/functions/: shader.cpp  shader.hpp
src/graphic/graphic_objects/: graphic_object.cpp  graphic_object.hpp  render_interface.hpp  slow_state_interface.hpp  state_interface.hpp  test_object.cpp  test_object.hpp
src/graphic/shaders/: default.frag  default.vert  test.frag  test.vert  world.frag  world.vert
